Add docuement url in job response
